Update scripts